<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Android Manifest -->
    <string name="app_name">Receiver</string>
    
    <!-- SensorReceiver Activity -->
    <string name="title">Rain Receiver</string>
    <string name="rain1">Sensor 1</string>
    <string name="rain2">Sensor 2</string>
    <string name="rain3">Sensor 3</string>
    <string name="rain4">Sensor 4</string>
    <string name="rain5">Sensor 5</string>
    <string name="rain6">Sensor 6</string>
    <string name="rain7">Sensor 7</string>
    <string name="rain8">Sensor 8</string>

    <string name="received">Last Reception</string>
    <string name="saved">Last Upload</string>
    <string name="empty">null</string>

</resources>